gcc/testsuite/gdc.dg/pr117115.d
// { dg-do compile }

enum E117115 {} // { dg-error "must have at least one member" }
